[project @ 2003-10-06 22:48:07 by eburns] No review since the core code on this was contribute by Craig, and I'm serving as reviewer.
M build-tests.xml

- de-activate TestRenderers_3 and TestLifecycleImpl_initial until I fix
  the "default values for native properties" issue

M src/com/sun/faces/util/Util.java

- author: Craig McClanahan

  r=edburns

  attribute values are no longer always Strings.

M test/com/sun/faces/lifecycle/TestLifecycleImpl_initial.java

- be more verbose about the exception.

M test/com/sun/faces/util/TestUtil.java

- use assertEquals where possible.

Original author: eburns
Date: 2003-10-06 22:48:11+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@2033 761efcf2-d34d-6b61-9145-99dcacc3edf1